--- a/novatel_msgs/package.xml
+++ b/novatel_msgs/package.xml
@@ -2,13 +2,10 @@
 <package>
   <name>novatel_msgs</name>
   <version>1.1.0</version>
-  <description>ROS messages which represent raw Novatel SPAN data.</description>
+  <description>ROS messages which represent raw NovAtel OEM6 SPAN data.</description>
 
   <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
   <maintainer email="icolwell@gsd.uwaterloo.ca">Ian Colwell</maintainer>
-  <maintainer email="jwhitley@autonomoustuff.com">Josh Whitley</maintainer>
-
-  <author email="support@novatel.com">NovAtel Support</author>
 
   <license>BSD</license>
 
